make-a-wish-salesforce/src/objects/Wish_Affiliation_Category__mdt.object
<CustomObject>
    <description>Captures how the &apos;Wish Affiliation Type&apos; field maps to the Wish Affiliation UI Components</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>Lists the Wish Affiliation category that the &apos;Wish affiliation type&apos; should relate to for display in custom UI components.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Participant</fullName>
                    <default>true</default>
                    <label>Participant</label>
                </value>
                <value>
                    <fullName>Medical Professional</fullName>
                </value>
                <value>
                    <fullName>Requested Participant</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Default_for_Category__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default value for Wish Affiliation Type when creating a new Wish Affiliation record using the custom component / flow</description>
        <label>Is Default for Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>To maintain the Order in which Affiliations are displayed in the participant selection component of the Wish Design Forms, categorized by the Category Field</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Displays the Wish affiliation&apos;s type for mapping to the category.</description>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Wish Affiliation Category</label>
    <pluralLabel>Wish Affiliation Categories</pluralLabel>
</CustomObject>